add edit and delete buttons to StudentDetail

--- a/client/src/styles/StudentInfo.css
+++ b/client/src/styles/StudentInfo.css
@@ -59,3 +59,36 @@ h4 {
   display: flex;
   align-items: center;
 }
+
+.student-info .edit-delete {
+  display: grid;
+  width: 85%;
+  grid-template-columns: 1fr 300px;
+  grid-auto-flow: column;
+}
+
+.edit-delete button {
+  width: 5rem;
+  height: 2rem;
+}
+
+.butt-box {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 8px;
+  padding: 4px;
+}
+
+.delete {
+  border: red 2px solid;
+}
+
+.edit {
+  border-width: 2px;
+}
+
+.delete:hover {
+  border: antiquewhite 1px solid;
+  background-color: red;
+}
