add edit and delete button in AdvisorDetail

--- a/client/src/styles/StudentInfo.css
+++ b/client/src/styles/StudentInfo.css
@@ -3,6 +3,11 @@
   grid-template-rows: 1fr 4fr 6fr;
 }
 
+.advisor-info {
+  display: grid;
+  grid-template-rows: 1fr 2fr 3fr;
+}
+
 .content {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -60,7 +65,8 @@ h4 {
   align-items: center;
 }
 
-.student-info .edit-delete {
+.student-info .edit-delete,
+.advisor-info .edit-delete {
   display: grid;
   width: 85%;
   grid-template-columns: 1fr 300px;
