--- a/client/src/styles/StudentInfo.css
+++ b/client/src/styles/StudentInfo.css
@@ -64,6 +64,24 @@ h4 {
   display: flex;
   align-items: center;
   border-collapse: collapse;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.row .row-button {
+  background-color: red;
+  width: 30px;
+  height: 24px;
+  font-size: 16px;
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.row button:hover.row-button {
+  background-color: lightcoral;
 }
 
 .student-info .edit-delete,
